--- a/Topics/contacting_ibm_storediq_customer_support.dita
+++ b/Topics/contacting_ibm_storediq_customer_support.dita
@@ -2,24 +2,32 @@
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="contacting_ibm_storediq_customer_support">
     <title>Contacting IBM StoredIQ customer support</title>
+    <prolog>
+        <metadata audience="novice"/>
+        <metadata>
+            <category/>
+        </metadata>
+    </prolog>
     <conbody>
         <p>For IBM StoredIQ technical support or to learn about available service options, contact
             IBM StoredIQ customer support at this phone number:<ul>
                 <li>1-866-227-2068</li>
             </ul></p>
         <p>Or, see the Contact IBM website at <xref href="https://www.ibm.com/contact/us/en/"
-                format="html" scope="external"/></p>
+                format="html" scope="external"/>
+        </p>
         <p><b>IBM Knowledge Center</b></p>
         <p>The IBM StoredIQ documentation is available in <xref
                 href="https://www.ibm.com/support/knowledgecenter/" format="html" scope="external"
-            /></p>
+                >IBM Knowledge Center</xref>
+        </p>
         <section>
             <title>Contacting IBM</title>
             <p>For general inquiries, call 800-IBM-4YOU (800-426-4968). To contact IBM customer
                 service in the United States or Canada, call 1-800-IBM-SERV (1-800-426-7378).</p>
             <p> For more information about how to contact IBM, including TTY service, see the
-                Contact IBM website at<xref href="https://www.ibm.com/contact/us/" format="html"
-                    scope="external"/>.</p>
+                Contact IBM website at <xref href="https://www.ibm.com/contact/us/en/" format="html"
+                    scope="external"/></p>
         </section>
     </conbody>
 </concept>
